<resources>
    <string name="facebook_application_id" translatable="false">235277531311098</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb235277531311098</string>
    <string name="app_name" translatable="false">JamPoint</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="find_jams">find jams</string>
    <string name="search_jams">search jams</string>
    <string name="welcome_to_first_search_jams">Welcome to your first jam search!</string>
    <string name="search">search</string>
    <string name="search_jams_method_explanation">Next you will need to enter an area where you will want to look for people who want to jam with you. Yes, with you!\nYou can do this by manually entering a location or allowing us to find them in your current environment.\nIn the future, you can always change the search area manually.\n\nDo you want us to search for your current location?</string>
    <string name="hi_search_jams">Hi, lets find people to jam with</string>
    <string name="yes">Yes</string>
    <string name="no_feed_manually">No, feed manually</string>
    <string name="problem_with_place_try_later">There is a problem with the selected place, please try again later</string>
    <string name="problem_with_place">There is a problem with the selected place</string>
    <string name="search_place">Search place</string>
    <string name="no">no</string>
    <string name="location_rational_message">Hi!\nWe would like you to allow us track your location for the sole purpose of alerting you about nearby musicians that could potentially jam with you.\nYou can always search jam friends manually.\n\nWould you like us to locate nearby jam friends automatically?</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="understood">Understood</string>
    <string name="no_location_permission_message">We can\'t track your location. For further usage you will need to feed your location manually.\nOtherwise, you can let the app gain access to your location within the system app\'s settings.</string>
    <string name="do_self_locate">Locate me button</string>
    <string name="go_to_app_system_settings">Move to system settings</string>
    <string name="location_notification_channel_id" translatable="false">LocationX2423id</string>
    <string name="social_notification_channel_id" translatable="false">SocialChannelFTW</string>
    <string name="location_updates">Location updates</string>
    <string name="general_messages">General messages</string>
    <string name="location_messages_description">Notification which appears when the app is location your current location</string>
    <string name="social_messages_description">Notification which appears when social interaction occurs</string>
    <string name="searching_jams">Searching nearby jam places..</string>
    <string name="halt">Halt</string>
    <string name="problem_with_location_updates">There is a problem updating your current location</string>
    <string name="track_me_mode">Track me mode</string>
    <string name="track_me_massage">In this mode the map will track your location every %s second</string>
    <string name="understood_start">Understood, begin</string>
    <string name="desc_profile_pic">Profile picture</string>
    <string name="members">Members</string>
    <string name="future_jams">Future jams</string>
    <string name="past_jams">Past jams</string>
    <string name="address">Address</string>
    <string name="time">Time</string>
    <string name="searching_musicians">Searching musicians</string>
    <string name="ask_to_join">Ask to join</string>
    <string name="ask_to_join2">Ask to\njoin</string>
    <string name="jamming_now">Jamming now</string>
    <string name="ask_to_join_team">Ask to join team</string>
    <string name="login_needed">Login is needed</string>
    <string name="why_to_login_explanation">Hi there!\\nFor meeting new musicians and jam together you must be a registered user</string>
    <string name="ok_sign_in">OK, sign in</string>
    <string name="back">Back</string>
    <string name="login_problem">Login failure</string>
    <string name="profile">Profile</string>
    <string name="my_jams">My jams</string>
    <string name="sign_out">Sign out</string>
    <string name="hi_guest">Hi guest</string>
    <string name="validate_join_meeting">Would you like to join the meeting at:\n%s ?</string>
    <string name="validate_join_jam_point">האם תרצה להצטרף לקבוצת ג\'ימג\'ום זו?</string>
    <string name="yes_join">Yes, join</string>
    <string name="join_meeting">Join meeting</string>
    <string name="join_team">Join team</string>
    <string name="cancel_request">Cancel request</string>
    <string name="cancel_request2">Cancel\nrequest</string>
    <string name="no_self_jams_points">No jam points managed by you</string>
    <string name="create_jam_point">Create jam point</string>
    <string name="database_fetch_error">There is a problem loading the data</string>
    <string name="jam_member">Jam member</string>
    <string name="edit_instruments">Edit instruments</string>
    <string name="update_">Update</string>
    <string name="jam_point_nickname">Jam point nickname</string>
    <string name="pendings_for_approval">Peding for approval</string>
    <string name="more_participants">More participants</string>
    <string name="define_meet_time">Define jam time</string>
    <string name="i_jam_on">I jam on</string>
    <string name="problem_update_instrument">There is a problem updating your jam instrument</string>
    <string name="input_is_empty">Input is empty</string>
    <string name="validate_jam_point_nick_name">Your jam point nickname will be:\n%s\nYou won\'t be able to change it later on.\nwould you like to proceed with jam point creation?</string>
    <string name="yes_proceed">Yes, proceed</string>
    <string name="you_have_created_new_jam_point">You have created new jam point</string>
    <string name="new_jam_point_explanation">כעת תוכל להוסיף מפגשים ולצרף חברים לג\'ימג\'ום.\nהאם תרצה להוסיף מפגשים כעת?</string>
    <string name="no_add_later">No, add later</string>
    <string name="create_meeting">Create meeting</string>
    <string name="choose_date">Choose date</string>
    <string name="please_enter_a_date">Please enter the meeting date</string>
    <string name="self_characterizes">An image that characterizes me</string>
</resources>