<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/jam_team_item_background"
    android:elevation="4dp">

    <TextView
        android:id="@+id/membersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searching_musicians"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_gravity="center"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/insrumentsContaienr"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp" />
        <Button
            android:id="@+id/editInstrumentsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            app:iconTint="?attr/colorPrimary"
            app:strokeColor="?attr/colorPrimary"
            app:icon="@drawable/ic_baseline_mode_edit_24"
            style="@style/Widget.App.Button.IconOnly.OutlinedButton" />
    </LinearLayout>

    <Button
        android:id="@+id/askToJoinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_to_join_team"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/pendinggTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pendings_for_approval"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/pendingsContaienr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:background="@color/gray100"/>
</LinearLayout>