<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:srcCompat="@drawable/ic_baseline_account_circle_24"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/desc_profile_pic"
        android:layout_marginTop="16dp"/>
    
    <TextView
        android:id="@+id/fullNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintEnd_toStartOf="@id/signBtn"
        android:layout_marginTop="8dp"
        tools:text="Itay cohen"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"/>
    
    <ImageButton
        android:id="@+id/signBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
        app:layout_constraintTop_toTopOf="@id/fullNameTextView"
        app:layout_constraintBottom_toBottomOf="@id/fullNameTextView"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="?attr/colorPrimary"
        android:elevation="4dp"
        app:tint="?attr/colorOnPrimary"
        android:contentDescription="@string/sign_out"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/instrumentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fullNameTextView"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/i_jam_on"
        app:drawableStartCompat="@drawable/ic_baseline_mode_edit_24"
        android:drawablePadding="5dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/instrumentTextInputLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/i_jam_on"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/fullNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:visibility="gone"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:text="גיטרה"
            android:maxLines="1"
            android:imeOptions="actionGo"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/insreumentProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="@id/instrumentTextInputLayout"
        app:layout_constraintBottom_toBottomOf="@id/instrumentTextInputLayout"
        app:layout_constraintStart_toEndOf="@id/instrumentTextInputLayout" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="instrumentTextInputLayout, instrumentTextView"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/characterizesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/self_characterizes" />

    <ImageView
        android:id="@+id/characterizesImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        tools:srcCompat="@drawable/ic_baseline_image_24"
        app:layout_constraintTop_toBottomOf="@id/characterizesTextView"
        android:contentDescription="@string/desc_profile_pic"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"/>

    <Button
        android:id="@+id/changeImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/characterizesImageView"
        app:layout_constraintEnd_toEndOf="@id/characterizesImageView"
        app:backgroundTint="#2FFF"
        app:icon="@drawable/ic_baseline_add_photo_alternate_24"
        style="@style/Widget.App.Button.IconOnly.OutlinedButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>